learned to change github code

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>This is my first ever website</h1>
     <h3>Happy learning</h3>
     <h5>look mamma!! i have learned github</h5>
+    <h5>lokk mamma i could change github coding</h5>
 </body>
 </html>
