changng to robot

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 </head>
 <body>
     <h1>This is my first ever website</h1>
-    <h3>Happy learning</h3>
-    <h5>look mamma!! i have learned github</h5>
-    <h5>lokk mamma i could change github coding</h5>
+   <p>Feeling happy now</p>
+   <p>I am a robot</p>
 </body>
 </html>
