--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
     <h1>This is my first ever website</h1>
    <p>Feeling happy now</p>
    <p>I am a robot</p>
+   <input type="text
+   ">
+   <br>
+   <button>Click me gattush!!</button>
 </body>
 </html>
